name:            cabal-meta
version:         0.2.2
license:         BSD3
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        build multiple packages at once
description:     see: <http://www.yesodweb.com/blog/2012/04/cabal-meta> and <http://github.com/yesodweb/cabal-meta>

stability:       Beta
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/
category:        Development

flag ghc7

Library
    if flag(ghc7)
        build-depends:   base            >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base            >= 4        && < 4.3
    build-depends: shelly >= 0.9
                 , text, system-filepath
                 -- , file-location
    extensions: OverloadedStrings 
    exposed-modules: CabalMeta

executable cabal-meta
    main-is: main.hs

    if flag(ghc7)
        build-depends:   base            >= 4.3      && < 5
        cpp-options:     -DGHC7
    else
        build-depends:   base            >= 4        && < 4.3
    build-depends: shelly >= 0.9
                 , text, system-filepath
                 -- , file-location

    ghc-options:     -Wall

    extensions: OverloadedStrings 

test-suite test
  main-is:         test/main.hs
  hs-source-dirs: .
  type:           exitcode-stdio-1.0

  build-depends: shelly >= 0.9
               , hspec, HUnit, unix, base, text, system-filepath
                 -- , file-location
  extensions: OverloadedStrings 

source-repository head
  type:     git
  location: https://github.com/yesodweb/cabal-meta
  
